# MandelbrotSetCPP

./: .gitignore  CMakeLists.txt  README.md  ZOOM_PRECISION.md  build.sh
include/: matrix.h
include/glad/: glad.h
res/shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
